--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,24 @@
 md-input-container textarea.md-input {
   min-height: 30px;
 }
+
+.node-entry{
+	color: #404040;
+}
+
+.node-description {
+	margin-left: 4px;
+	color: #606060;
+}
+
+.node-offset {
+	font-family: "monospace";
+	font-size: larger;
+	margin-left: 6px;
+}
+
+.node-value {
+	font-family: "monospace";
+	font-size: larger;
+	margin-left: 12px;
+}
