--- a/views/templates/tree_entry.html
+++ b/views/templates/tree_entry.html
@@ -1,4 +1,4 @@
-<div layout-padding>
+<div>
     
     <section layout="row" layout-align="start center" layout-wrap>
         <md-button class="md-fab md-mini" ng-click="removeNode()" aria-label="remove node">
@@ -10,26 +10,34 @@
         <md-switch ng-model="treeNode.is_container_type" aria-label="Is it a container type?" ng-change="toggleContainerType();">
             {{UI.container_type_caption}}
         </md-switch>        
-        <md-input-container style="min-width: 300px;" flex>
+        <md-input-container ng-if="treeNode.is_container_type" style="min-width: 300px;" flex>
             <label> Description </label>
             <input ng-model="treeNode.desc" ng-change="treeData.updateJson();"/>
         </md-input-container>
+        <md-button ng-if="!treeNode.is_container_type" class="md-primary" ng-click="showEditDialog($event)" aria-label="edit entry">
+            Edit Entry
+        </md-button>
+        
     </section>       
     
     <section layout="column" ng-if="treeNode.is_container_type">
         <tree-container tree-data="treeData" tree-node="treeNode.children" parent-node="treeNode" offset="10"></tree-container>
     </section>
 
-    <section layout="row" layout-sm="column" ng-if="!treeNode.is_container_type" _layout-align="start center" layout-margin layout-wrap>
-        <md-input-container style="width: 120px; margin: 8px" md-no-float>
+    <md-whiteframe ng-if="!treeNode.is_container_type" class="md-whiteframe-z2 node-entry" layout="row" layout-sm="column" layout-align="start center" offset="5" layout-padding>
+        <section class="node-description" flex="30">{{treeNode.desc}}</section>
+        <section class="node-offset" flex="10">{{treeNode.offset}}</section>
+        <section class="node-value" flex >{{treeNode.value | byteify}}</section>
+        <!-- <md-input-container style="width: 120px; margin: 8px" md-no-float>
             <input ng-model="treeNode.offset" ng-change="treeData.updateJson();" placeholder="hex offset" ng-disabled="!treeNode.is_enabled"/>
-        </md-input-container>
+        </md-input-containe
         <md-input-container style="min-width: 500px" flex md-no-float>
             <input ng-model="treeNode.value" ng-change="treeData.updateJson();" placeholder="hex value" ng-disabled="!treeNode.is_enabled"/>
-        </md-input-container>
-        <md-input-container style="min-width: 500px" flex >
-            <textarea placeholder="Preview" disabled>{{treeNode.value | byteify}}</textarea>
-        </md-input-container>
-    </section>
+        </md-input-container> -->
+        <!-- <md-input-container style="min-width: 500px" flex md-no-float >
+            <label>Preview</label>
+            <textarea class="entry-preview" ng-model="treeNode.$$preview" md-no-autogrow disabled></textarea>
+        </md-input-container> -->
+    </md-whiteframe>
     
 </div>
