--- a/css/app.css
+++ b/css/app.css
@@ -2,6 +2,12 @@ md-input-container textarea.md-input {
   min-height: 30px;
 }
 
+.toggle-json-fab {
+	position: fixed; 
+	bottom: 16px; 
+	right: 16px;
+}
+
 .node-entry{
 	color: #404040;
 }
