--- a/views/templates/tree_container.html
+++ b/views/templates/tree_container.html
@@ -1,5 +1,5 @@
 <tree-entry tree-data="treeData" tree-node="entryData" ng-repeat="entryData in treeNode"></tree-entry>
 
-<md-button class="md-fab md-mini" ng-click="addNode()" offset="5" aria-label="Add Node">
+<md-button class="md-fab md-mini" ng-if="!parentNode || parentNode.is_enabled" ng-click="addNode()" offset="5" aria-label="Add Node">
 	<i class="fa fa-plus"></i>
 </md-button>
