style(editEntry): remove md-actions class

--- a/src/views/dialogs/edit_entry.html
+++ b/src/views/dialogs/edit_entry.html
@@ -36,7 +36,7 @@
     </div>
   </md-dialog-content>
 
-  <md-dialog-actions class="md-actions" layout="row">
+  <md-dialog-actions layout="row">
     <span flex></span>
     <md-button ng-click="$ctrl.cancel()">
       Cancel
